fix stretched profile images

--- a/src/styles/components/navbar/user_menu.module.sass
+++ b/src/styles/components/navbar/user_menu.module.sass
@@ -12,6 +12,7 @@
 
     .avatar-img
       border-radius: 50%
+      object-fit: cover
 
   .dropdown-container
     position: absolute
